--- a/index.html
+++ b/index.html
@@ -2,66 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>David Bowers' Profile</title>
+  <title>David M. Bowers III Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
-<nav class="fixed-top">
+
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">David Bowers</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li class="name">David M. Bowers III</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Experience</a></li>
         </ul>
     </div>
-  </nav>
+
     <header>
       <img src="images/me.png" alt="My Personal Logo" class="profile-image">
-      <h1 class="tag name content-3 text-white">Hi, My Name Is <em>David</em>, 
-        But You Can Call Me <em>Trey</em>.</h1>
-      <p class="tag location content-4">My home is Greenville, South Carolina.</p>
+      <h1 class="tag name">Hello, I’m David.</h1>
+      <p class="tag location">My home is Greenville, South Carolina.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2 class="content-3">Background</h2>
-        <p class="content-4">I design websites, run social media campaigns, and create custom graphic and video content.</p>
+        <h2>Background</h2>
+        <p>Hi, my name is David, 
+          but you can call me Trey. I Design websites, Run social media campaigns, and create custom Graphic and Video content.</p>
 
-        <p class="content-4">I have worked on lots of projects over the years. Some where big and some where small, but I learned something from every project and am contiuning to improve everyday.</p>
-        
-        <p class="content-4">I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>With what started as a new hobby, has slowly become my passion. As my technical skills have grown, so has my desire to help people. I am now actively working harder than ever to deliver a high-quality workflow, customer experience, and digital products to all of my clients.</p>
       </div> 
 
       <div class="card">
-        <h2 class="content-3">Goals</h2>
-        <p class="content-4">I am a young and experienced designer looking to refine my skills and build creditidation. Treehouse is helping me do that as I look to find a job, and move away from freelance work:</p>
+        <h2>Goals</h2>
+        <p>I have lots of skills that I am working on, here are a few of them:</p>
         <ul class="skills">
-          <li class="content-4">Responsive Design</li>
-          <li class="content-4">JavaScript</li>
-          <li class="content-4">Adobe Photoshop</li>
-          <li class="content-4">Adobe Premier</li>
-          <li class="content-4">HTML &amp; CSS</li>
+          <li>HTML 5</li>
+          <li>Boostrap</li>
+          <li>Jquery</li> 
+          <li>The Design Process</li>
+          <li>Best Coding Practices</li>
         </ul>
+        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
 
     </main>
     <footer>
-      
-      <p class="copyright">&copy;Copyright 2015, David M. Bowers III</p>
+      <p class="copyright">&copy; Copyright 2015, David M. Bowers III</p>
     </footer>
   </body>
   </html>
