--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>David M. Bowers III Profile</title>
+  <title>Jane Smith's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -11,42 +11,41 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">David M. Bowers III</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="My Personal Logo" class="profile-image">
-      <h1 class="tag name">Hello, I’m David.</h1>
-      <p class="tag location">My home is Greenville, South Carolina.</p>
+      <img src="images/me.png" alt="David M Bowers III" class="profile-image">
+      <h1 class="tag name">Hello, I’m David M. Bowers III.</h1>
+      <p class="tag location">I create awesome websites, that help businesses grow.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>Hi, my name is David, 
-          but you can call me Trey. I Design websites, Run social media campaigns, and create custom Graphic and Video content.</p>
 
-        <p>With what started as a new hobby, has slowly become my passion. As my technical skills have grown, so has my desire to help people. I am now actively working harder than ever to deliver a high-quality workflow, customer experience, and digital products to all of my clients.</p>
+        <p class="lead">For the past three years I have been a student and freelance designer. I have been building both my technical and interpersonal skills, in my efforts to join the web design industry.</p>
+
+        <p>I now feel ready to take on any challenge that I might come across in my journey through the web design industry. I am excited to share my expereince with other passionate creatives, to work on projects that change things.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I have lots of skills that I am working on, here are a few of them:</p>
+        <p>It is my ultiamte life goal to run my own successful design agency. With this being such a big goal these are the things im working on to get there.</p>
         <ul class="skills">
-          <li>HTML 5</li>
-          <li>Boostrap</li>
-          <li>Jquery</li> 
-          <li>The Design Process</li>
-          <li>Best Coding Practices</li>
+          <li>UX Design</li>
+          <li>JavaScript &amp; JQuery</li>
+          <li>Bootstrap 4</li>
+          <li>Adobe Creative Cloud</li>
+          <li>Business Management</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I am sure there will be plenty of more skills that I will need to learn along the way, but being a life long learner, that no problem to me.</p>
       </div> 
 
     </main>
     <footer>
-      <p class="copyright">&copy; Copyright 2015, David M. Bowers III</p>
+      <p class="copyright">&copy;Copyright 2015, David M. Bowers III</p>
     </footer>
   </body>
   </html>
